<resources>
    <string name="app_name">dpPlayer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="my">我的</string>
    <string name="rover">漫游</string>
    <string name="discover">发现</string>
    <string name="local">本地</string>
    <string name="recent">最近播放</string>
    <string name="star">我的收藏</string>
    <string name="play_next">播放下一首</string>
    <string name="song_num">%1$d 首</string>
    <string name="default_num">0 首</string>

    <string name="item_local">本地歌曲</string>
    <string name="item_history">播放历史</string>
    <string name="item_favorite">我的收藏</string>
    <string name="item_download">下载</string>
    <string name="item_cached">缓存下载</string>
    <string name="item_cached_music">缓存歌曲</string>
    <string name="local_music">本地歌曲</string>
    <string name="item_video">本地视频</string>
    <string name="local_music_title">本地音乐</string>
    <string name="local_menu_local">本地</string>
    <string name="local_menu_album">专辑</string>
    <string name="local_menu_artist">艺术家</string>
    <string name="general_error">出现错误</string>
    <string name="retry">重试</string>
    <string name="random_play">随机播放</string>
    <string name="tip_empty_song">本地音乐空空如也</string>
    <string name="back">返回</string>
    <string name="localTitle">本地音乐</string>
    <string name="album_cover">专辑封面</string>
    <string name="artist_img">艺人名称</string>
    <string name="album">专辑</string>
    <string name="artist_image">艺术家图片</string>
    <string name="artist">"歌手: "</string>
    <string name="play_time">播放时间</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="play_no_resource">无音乐</string>
    <string name="lyric_default_hint">暂无歌词</string>
    <string name="transition_cover">CoverTansition</string>
    <string name="play_mode">播放模式</string>
    <string name="love">收藏</string>
    <string name="equalizer">均衡器</string>
    <string name="search_lyric">在线搜歌</string>
    <string name="song_operate">歌曲操作</string>
    <string name="setting_key_mobile_wifi">mobile_wifi</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_list_size">(100)</string>
    <string name="play_list">播放列表</string>
    <string name="heart">我的收藏</string>
    <string name="save_mlist">创建歌单</string>
    <string name="add2mlist">添加到歌单</string>
    <string name="add2mlist_fail">添加失败，歌曲已存在</string>
    <string name="add2mlist_success">添加成功</string>
    <string name="play_song_next">下一首播放</string>
    <string name="check_album">查看专辑</string>
    <string name="check_artist">查看歌手</string>
    <string name="delet">删除</string>
    <string name="share">分享</string>
    <string name="songs">Songs</string>
    <string name="welcome">"欢迎 "</string>
    <string name="suggestion_songs">推荐</string>
    <string name="new_music_mix">热歌速递</string>
    <string name="history">历史记录</string>
    <string name="last_added">最近添加</string>
    <string name="my_top_tracks">最多收听</string>
    <string name="shuffle">随机播放</string>
    <string name="MlistName">歌单名</string>
    <string name="edit_info">编辑信息</string>


</resources>