<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:id="@+id/myFrag">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                app:cardBackgroundColor="@color/cardColor"
                app:cardCornerRadius="@dimen/dp_2"
                app:cardElevation="@dimen/dp_2"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <org.ww.dpplayer.ui.widget.MyItemView
                        android:id="@+id/localView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/item_music"
                        app:iv_icon_color="@color/logo_blue"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/item_local" />


                <org.ww.dpplayer.ui.widget.MyItemView
                        android:id="@+id/historyView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/ic_history_black"
                        app:iv_icon_color="@color/amber"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/item_history" />


                <org.ww.dpplayer.ui.widget.MyItemView
                        android:id="@+id/favoriteView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/item_heart"
                        app:iv_icon_color="@color/pink_pressed"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/item_favorite" />

                <!--                <org.ww.testapp.ui.widget.MyItemView-->
                <!--                        android:id="@+id/videoView"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="@dimen/dp_56"-->
                <!--                        android:gravity="center_vertical"-->
                <!--                        app:iv_icon="@drawable/ic_video_library"-->
                <!--                        app:iv_icon_color="@color/app_red"-->
                <!--                        app:tv_desc="@string/default_num"-->
                <!--                        app:tv_name="@string/item_video" />-->

<!--                <org.ww.testapp.ui.widget.MyItemView-->
<!--                        android:id="@+id/downloadView"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="@dimen/dp_56"-->
<!--                        android:gravity="center_vertical"-->
<!--                        app:iv_icon="@drawable/item_download"-->
<!--                        app:iv_icon_color="@color/colorAccentDarkTheme"-->
<!--                        app:tv_desc="@string/default_num"-->
<!--                        app:tv_name="@string/item_download" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_4"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/cardColor"
                app:cardCornerRadius="@dimen/dp_2"
                app:cardElevation="@dimen/dp_2"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                        <com.google.android.material.tabs.TabLayout
                                android:id="@+id/playlistTab"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="@dimen/dp_16"
                                android:layout_weight="1"
                                app:tabIndicatorHeight="0dp"
                                app:tabSelectedTextColor="@color/accentColor"/>

                        <ImageView
                                android:id="@+id/playlistAddIv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_playlist_add"
                                app:tint="@color/iconColor" />

                        <ImageView
                                android:id="@+id/playlistManagerIv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="@dimen/dp_16"
                                android:background="?android:attr/selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_more"
                                app:tint="@color/iconColor" />
                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/divider_line" />

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/playlistRcv"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:clipToPadding="false"
                                android:minHeight="@dimen/dp_200"
                                android:paddingTop="@dimen/dp_8" />

                        <ProgressBar
                                android:id="@+id/loading_progress_bar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:indeterminate="true"
                                android:visibility="gone"
                                tools:visibility="visible" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>